# CallMate

./: README.md  environment.yml  决策记录.md  迭代计划.md  需求文档.md
.github/workflows/: test.yml
callmate/: .env.template  .gitignore  LICENSE  README.md  main.py  pyproject.toml
callmate/.github/workflows/: test.yml
callmate/core/: advisor.py  audio_capture.py  command_handler.py  dialogue_manager.py  presenter.py  transcriber.py
callmate/storage/: history_store.py  profile_store.py
callmate/tests/: conftest.py  test_advisor.py  test_audio_capture.py  test_command_handler.py  test_dialogue_manager.py  test_main.py  test_mock_stream.py  test_presenter.py  test_profile_store.py  test_transcriber.py
callmate/utils/: config.py  mock_stream.py
