[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "callmate"
version = "0.1.0"
description = "Real-time call assistant for introverts — helps you respond during phone calls."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["call", "assistant", "ai", "realtime"]

[project.scripts]
callmate = "callmate.main:main"

[tool.setuptools.packages.find]
include = ["callmate*"]
